@@ -1,12 +1,9 @@
 PROG        = usb-modeswitch-data
-VERS        = 20100623
+VERS        = 20100707
 RM          = /bin/rm -f
 PREFIX      = $(DESTDIR)/usr
 ETCDIR      = $(DESTDIR)/etc
-UDEVDIR     = $(DESTDIR)/lib/udev
-RULESDIR    = $(UDEVDIR)/rules.d
-SBINDIR     = $(PREFIX)/sbin
-MANDIR      = $(PREFIX)/share/man/man1
+RULESDIR    = $(DESTDIR)/lib/udev/rules.d
 
 
 .PHONY:     clean
@@ -43,8 +40,6 @@ rules-reload:
 uninstall: files-uninstall rules-reload
 
 files-uninstall:
-	$(RM) $(SBINDIR)/usb_modeswitch
-	$(RM) $(UDEVDIR)/usb_modeswitch
 	$(RM) $(RULESDIR)/40-usb_modeswitch.rules
 	$(RM) -R $(ETCDIR)/usb_modeswitch.d
 
