@@ -1,0 +1,14 @@
+########################################################
+# Atheros Wireless / Netgear WNDA3200
+
+DefaultVendor= 0x0cf3
+DefaultProduct=0x20ff
+
+TargetVendor=  0x0cf3
+TargetProduct= 0x7010
+
+CheckSuccess=10
+NoDriverLoading=1
+
+MessageContent="5553424329000000000000000000061b000000020000000000000000000000"
+NeedResponse=1
