@@ -6,5 +6,8 @@ DefaultProduct=0x0003
 
 TargetClass=0xff
 
+MessageContent="5553424312345678000000000000061e000000000000000000000000000000"
+MessageContent2="5553424312345679000000000000061b000000020000000000000000000000"
+
 CheckSuccess=20
 
