@@ -8,6 +8,8 @@ TargetVendor=  0x19d2
 TargetProduct= 0x0094
 
 MessageContent="5553424312345678000000000000061b000000020000000000000000000000"
+
 NeedResponse=1
+
 CheckSuccess=20
 
