@@ -7,6 +7,10 @@ DefaultProduct=0x0040
 TargetVendor=  0x19d2
 TargetProduct= 0x0022
 
+MessageContent="5553424312345678000000000000061e000000000000000000000000000000"
+MessageContent2="5553424312345679000000000000061b000000020000000000000000000000"
+
+NeedResponse=1
+
 CheckSuccess=20
 
-MessageContent="5553424312345678000000000000061b000000030000000000000000000000"
