@@ -7,8 +7,8 @@ DefaultProduct=0x0103
 TargetVendor=  0x19d2
 TargetProduct= 0x0031
 
-MessageContent="5553424312345678000000000000061b000000020000000000000000000000"
-MessageContent2="55534243876543212000000080000c85010101180101010101000000000000"
+MessageContent="5553424312345678000000000000061e000000000000000000000000000000"
+MessageContent2="5553424312345679000000000000061b000000020000000000000000000000"
 
 NeedResponse=1
 
