@@ -1,0 +1,13 @@
+########################################################
+# Onda MW833UP
+
+DefaultVendor= 0x1ee8
+DefaultProduct=0x0013
+
+TargetVendor=  0x1ee8
+TargetProduct= 0x0012
+
+CheckSuccess=20
+
+MessageContent="555342431234567800000000000010ff000000000000000000000000000000"
+ResponseNeeded=1
